--- a/password.css
+++ b/password.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
+    height: 100vh;
 }
 .random-password {
     /* background: rgba(255, 255, 255, 0.1);
@@ -86,5 +86,6 @@ body {
 #eyeIcon, #copy {
     font-size: 1.5rem;
 }
+
 
 
